# Data-Structures-And-Algorithms

./: .gitignore  CMakeLists.txt  leet_practice.cpp  note_to_self.txt
C/: ex.c
C++/1_Basics/1_Patterns/: patterns.cpp
C++/1_Basics/2_Basic_Maths/: prb_ans.cpp
C++/1_Basics/3_Basic_Recursion/: prb_1_to_4.cpp  prb_5_to_10.cpp
C++/1_Basics/5_Sorting_techniques/: sorting_1.cpp  sorting_2.cpp
C++/2_Arrays/Easy/: prb_10_to_15.cpp  prb_1_to_4.cpp  prb_5_to_9.cpp
C++/2_Arrays/Medium/: leaders_in_array.cpp  longest_consecutive_seqens.cpp  majority_element_1.cpp  maximum_subarray.cpp  next_permutation.cpp  rearrange_array_by_sign.cpp  rotate_matrix_90.cpp  set_matrix_zeros.cpp
